# othello-trainer

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  othello-trainer-design-verbalization.md  othello-trainer-design.md
.claude/: settings.json.example
.claude/agents/: explorer.md  implementer.md  reviewer.md  tester.md  verifier.md
.github/agents/: implementer.agent.md  reviewer.agent.md  tester.agent.md
.github/workflows/: deploy-pages.yml  tests.yml
app/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/public/: joseki.json  manifest.json  opening-book.json  puzzles.json  sw.js
app/scripts/: inject-sw-version.mjs  test-node-budget-wasm.mjs  test-pattern-v5-wasm.mjs  test-pattern-v6-wasm.mjs
app/src/: TitleScreen.css  TitleScreen.test.tsx  TitleScreen.tsx  app.css  app.playmode.test.tsx  (+16 more)
bench/: ffo_positions.json
bookgen/: joseki-research.json  opening-book-eval-checkpoint.json  opening-book-eval-input.json  opening-book-warnings.json  wthor-lines.json
engine/: Cargo.toml
engine/src/: bitboard.rs  endgame.rs  eval.rs  explain.rs  lib.rs  mpc.rs  pattern_eval.rs  patterns.rs  protocol.rs  search.rs  tt.rs  zobrist.rs
engine/tests/: eval_features_nps_bench.rs  ffo_bench.rs  pattern_eval_nps_bench.rs  t163_canonical_nps_bench.rs
puzzlegen/: generate.ts
scripts/: _codex-common.ps1  codex-design.ps1  codex-design.sh  codex-review.ps1  codex-review.sh  codex-task.ps1  codex-task.sh
tasks/: STATUS-archive.md  STATUS.md  T001-rust-workspace-setup.md  T002-bitboard-movegen.md  T003-zobrist-tt.md  T004-eval-v1.md  T005-search-pvs.md  T006-endgame-solver.md  T007-search-hardening.md  T008-wasm-api.md  T009-ffo-bench.md  T010-app-scaffold.md  T011-canvas-board.md  T012-worker-engine.md  T013-play-mode.md  T014-pwa-setup.md  T015-github-pages-deploy.md  T016-joseki-data-research.md  T017-joseki-dag.md  T018-multi-move-eval.md  T019-eval-badge-blunder.md  T020-joseki-practice-mode.md  T021-midgame-practice-mode.md  T022-edax-eval-comparison.md  T023-sw-cache-versioning-fix.md  T024-eval-scale-calibration.md  T025-joseki-data-expansion.md  T026-joseki-clear-endpoint-display.md  T027-tsume-puzzle-generation.md  T028-tsume-play-mode.md  T029-game-analysis-core.md  T030-blunder-analysis-panel.md  T031-feature-layer-attribution.md  T032-motif-detection-overlay.md  T033-refutation-layer.md  T034-analyze-timems-wasm-hang.md  T035-verbalization-training-mode.md  T036-glossary-weakness-stats.md  T037-llm-commentary-layer.md  T038-analysis-joseki-integration.md  (+174 more)
train/: Cargo.toml
train/src/: experiment.rs  lib.rs  main.rs  regression.rs  simple_corpus.rs  t088_experiment.rs  t090_distillation.rs  train_data.rs  wthor.rs
train/tests/: real_data.rs
train/weights/: README.md
(+554 files in other folders)
