[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# T048: MPC(Multi-ProbCut)を有効化するためのコンパイル時フィーチャフラグ。
# デフォルト(フィーチャ無効)ではMPCは無効(`src/mpc.rs::margin_centidisc`
# 参照)。実測の結果(`src/mpc.rs`冒頭のドキュメント・T048作業ログ参照)、
# 本エンジンの現在の評価関数ではMPCが同一深さでの総ノード数・同一時間予算
# での到達深さのいずれも改善しなかった(むしろわずかに悪化した)ため、
# 既定では無効化し、`mpc_enabled`フィーチャで明示的に有効化しない限り
# 従来どおりの探索(MPCなし)のままにしている。MPC有無での比較検証
# (`bin/calibrate_mpc.rs`のbenchサブコマンド・`bench/edax-compare/`の
# 自己対戦スクリプト)は、通常ビルドと
# `cargo build --release --features mpc_enabled` の2種類の実行ファイルを
# 使い分けることで行う。
[features]
mpc_enabled = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1.1.0"

# GitHub Actions上のwasm-pack(最新版)がバンドルするwasm-optが、現行の
# wasm-bindgenが生成するwasmモジュール(複数のtableセクションを含む)を
# パースできず `Only 1 table definition allowed in MVP` で失敗する
# (wasm-pack/binaryenのエコシステム間の既知の非互換。T021のデプロイ確認で発覚)。
# wasm-optはサイズ最適化のための後処理であり必須ではないため無効化する。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
