[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# T156c: MPCコードを比較用バイナリへ含める互換feature。実行時の有効化は
# SearchPolicy.enable_mpcで別に制御し、featureを指定しても既存公開経路は
# default OFFのまま。テストビルドはGate 0検証のためコードを常に含める。
[features]
mpc_enabled = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-time = "1.1.0"

# GitHub Actions上のwasm-pack(最新版)がバンドルするwasm-optが、現行の
# wasm-bindgenが生成するwasmモジュール(複数のtableセクションを含む)を
# パースできず `Only 1 table definition allowed in MVP` で失敗する
# (wasm-pack/binaryenのエコシステム間の既知の非互換。T021のデプロイ確認で発覚)。
# wasm-optはサイズ最適化のための後処理であり必須ではないため無効化する。
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
